Implemented swagger oauth2 callback
